welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var n= getMondeHauteur()
var T= new Array[Color](n)
	for (k <- 0 to n-1){
		T(k)=getCouleurSol()
		avance()
	}
	avance()
	gauche()
	avance()
	droite()
	for (i <- 0 to n-1){
		setCouleurBrosse(T(k))
		baisseBrosse()
		leveBrosse()
		avance()
	}
}
